Solved menu with shadows on safari

--- a/lilianlibrary/catalog/static/css/styles.css
+++ b/lilianlibrary/catalog/static/css/styles.css
@@ -7,7 +7,13 @@ body {
 }
 
 #lib {
-    font-size: 2.5em;
+    font-size: 1.5em;
+}
+
+@media (min-width: 768px) {
+    #lib {
+        font-size: 2em;
+    }
 }
 
 #menu {
